--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,5 +1,5 @@
 <h1>Welcome to my rails APP</h1>
 
 <ul>
-  <li><%= link_to "Register magical land", "#" %></li>
+  <li><%= link_to "Register magical land", magical_lands_path %></li>
 </ul>
