--- a/app/views/magical_lands/show.html.erb
+++ b/app/views/magical_lands/show.html.erb
@@ -2,3 +2,4 @@
 <p><strong>Universe: </strong><%= @magical_land.universe %></p>
 <p><strong>Secret code: </strong><%= @magical_land.secret_code %></p>
 <p><strong>Deadly: </strong><%= @magical_land.deadly %></p>
+<p><strong>Id: </strong><%= @magical_land.id %></p>
