--- a/app/views/magical_lands/show.html.erb
+++ b/app/views/magical_lands/show.html.erb
@@ -1,3 +1,6 @@
+<% if flash[:notice] %>
+  <p><%= flash[:notice] %></p>
+<% end %>
 <h1><strong>Name: </strong><%= @magical_land.name %></h1>
 <p><strong>Universe: </strong><%= @magical_land.universe %></p>
 <p><strong>Secret code: </strong><%= @magical_land.secret_code %></p>
